refactor: View, Model 리팩터링으로 인한 Controller 코드 변경 && 코드 최적화